add medals to levelmap & adjust documentation
